objects/Programs__c.object
<CustomObject>
    <label>Program</label>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Programs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aclasta</fullName>
                </value>
                <value>
                    <fullName>Baraclude</fullName>
                </value>
                <value>
                    <fullName>Caelyx</fullName>
                </value>
                <value>
                    <fullName>Diflucan</fullName>
                </value>
                <value>
                    <fullName>Ebixa</fullName>
                </value>
                <value>
                    <fullName>Forteo</fullName>
                </value>
                <value>
                    <fullName>Gleevec</fullName>
                </value>
                <value>
                    <fullName>Harvoni</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Group__c</fullName>
        <label>Program Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturer Program</fullName>
                </value>
                <value>
                    <fullName>Patient Inquiry</fullName>
                </value>
                <value>
                    <fullName>Physician Referral</fullName>
                </value>
                <value>
                    <fullName>Referral GP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient Program</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>